[package]
name = "pdf-images"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.12"
aws-sdk-s3 = "1.119.0"
axum = { version = "0.8.8", features = ["multipart"] }
blake3 = "1.8.2"
image = { version = "0.25.9", features = ["avif", "exr", "qoi", "webp"] }
parenv = "0.1.9"
pdfium-render = { version = "0.8.37", features = ["thread_safe"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
